--- a/.classpath
+++ b/.classpath
@@ -6,12 +6,42 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER">
+	<classpathentry kind="lib" path="C:/Users/caleb/Downloads/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.base.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX">
+	<classpathentry kind="lib" path="C:/Users/caleb/Downloads/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.controls.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/caleb/Downloads/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.fxml.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/caleb/Downloads/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.graphics.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/caleb/Downloads/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.media.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/caleb/Downloads/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.swing.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/caleb/Downloads/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx.web.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/caleb/Downloads/openjfx-16_windows-x64_bin-sdk/javafx-sdk-16/lib/javafx-swt.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
